--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "Chime": {
-    "awsAccessKeyId": "AKIA3BSQMIMKNNM3EEWP",
-    "awsSecretAccessKey": "e+2OeJUYMbobhmRRsCmHalC8Ws1uadK1lYsOtZqw"
+    "awsAccessKeyId": "<YOUR_ACCESS_KEY_HERE>",
+    "awsSecretAccessKey": "<YOUR_SECRET_KEY_HERE>"
 
   }
 }
